--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <link rel="stylesheet" href="style.css">
+  <title>Talks</title>
 </head>
 <body>
 <a href = "https://www.katiejolly.io/portfolio/"><span class = "home-arrow">&#8592;</span></a>
