rework some of the design

--- a/index.html
+++ b/index.html
@@ -6,14 +6,24 @@
 </head>
 <body>
 <a href = "https://www.katiejolly.io/portfolio/"><span class = "home-arrow">&#8592;</span></a>
-<h1>Talks I've given</h1>
-<p>If you're interested in chatting more about any of these presentations, feel free to contact me!</p>
+<p> Feel free to contact me if you are interested in chatting more about any of these presentations!</p>
 <br>
+<hr>
 <br>
-<h2> 2019 </h2>
-<p align="center">
-<a href = "https://www.katiejolly.io/rnorth-19/#1"> Geographic Data Science in R with Honeybees </a>
+<p>
+  <a href="http://www.katiejolly.io/rladies-reprex-2020/#1">Writing reproducible examples to get good help</a>
 </p>
+<p>
+  <a href="http://www.katiejolly.io/rladies-datavis-20/#1">How I Think About Data Visualization (Visualizing Elevation along Amtrak's Empire Builder Line)</a>
+</p>
+<p>
+  <a href = "https://www.katiejolly.io/rnorth-19/#1"> Geographic Data Science in R with Honeybees </a>
+</p>
+<br>
+
+
+<br>
+
 
 </body>
 </html>
